--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -1,9 +1,12 @@
 {% extends "core/base.html" %}
 {% load static %}
-{% block content %}
+{% block extra_head %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
-<link rel="stylesheet" href="{% static 'statics/css/style.css' %}">
+
+<link rel="preload" href="{% static 'statics/css/style.css' %}" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="{% static 'statics/css/style.css' %}"></noscript>
+
 <style>
 .select2-selection {
     position: relative;
@@ -14,10 +17,11 @@
     width: 300px !important;
 }
 </style>
+{% endblock extra_head %}
 {% comment %} ################## {% endcomment %}
 {% comment %} include Heder here {% endcomment %}
 {% comment %} ################## {% endcomment %}  
-
+{% block content %}
 {% if messages %}
     <ul class="alert-success">
         {% for message in messages %}
