--- a/apps/store/templates/store/qna.html
+++ b/apps/store/templates/store/qna.html
@@ -1,6 +1,6 @@
 {% extends "core/base.html" %}
 {% load static %}
-{% block content %}
+{% block extra_head %}
 <script>
     // JavaScript code to hide the element with ID "callqna" based on the URL path
 window.addEventListener('DOMContentLoaded', function() {
@@ -135,6 +135,8 @@ function incrementDislike(pk) {
 
 <link rel="stylesheet" href="{% static 'statics/css/style.css' %}">
 <link rel="stylesheet" href="{% static 'statics/css/2417dbe620-contentpages_css.css' %}">
+{% endblock extra_head %}
+{% block content %}
 <div id="page" class="wrapper single-product contentpage-page " data-psp-trigger="" data-seller-id="958079" data-content-type="1" data-content-id="2707350" data-trigger-leave-page="1">
     <div class="new-banner-section banner-image-props homepage-banner-all">
         <div class="container" >
