--- a/apps/store/templates/store/search.html
+++ b/apps/store/templates/store/search.html
@@ -1,7 +1,6 @@
 {% extends "core/base.html" %}
 {% load static %}
-
-{% block content %}
+{% block extra_head %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
@@ -59,7 +58,8 @@
 <link rel="stylesheet" href="{% static 'statics/css/85185fcd95-searchpage_new_css.css' %}" as="style">
       
 <link rel="preload " href="{% static 'statics/js/47a9372f50-searchpage_new.js' %}" as="script">
-
+{% block extra_head %}
+{% block content %}
 <div id="book-details-info" class="book-details-info hidden">
 </div>
 <!-- banner-filter-result desktop sticky-init sticky-active sticky-down -->
