--- a/apps/store/templates/reviews.html
+++ b/apps/store/templates/reviews.html
@@ -1,6 +1,6 @@
 {% extends "core/base.html" %}
 {% load static %}
-{% block content %}
+{% block extra_head %}
 <script>
     function openCity(evt, cityName) {
         var i, tabcontent, tablinks;
@@ -28,7 +28,8 @@
 
         <link rel="stylesheet" href=" {% static 'statics/css/de5535418a-myreviews_css.css' %}">
         <link rel="stylesheet" href="{% static 'statics/css/74c8e7dfbc-wishlistpage_css.css' %}">
-
+        {% endblock extra_head %}
+        {% block content %}
         <div id="app" data-country="214" class="">
             <div id="user-reviews" class="wrapper content-page">
                 <article id="content" class="content-wrapper page-mijn-beoordelingen">
