--- a/apps/store/templates/settings.html
+++ b/apps/store/templates/settings.html
@@ -1,12 +1,15 @@
 {% extends "core/base.html" %}
 {% load static %}
 
-{% block content %}
+{% block extra_head %}
+
 <link rel="preload " href="{% static 'statics/js/c8444127b6-settingspage.js'%}" as="script">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" 
 integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
 crossorigin="anonymous"></script>
         <link rel="stylesheet" href="{% static 'statics/css/3b7bc560f0-settingspage_css.css' %}">
+        {% endblock extra_head %}
+        {% block content %}
         <div id="app" data-country="214" class="">
             <div id="page" class="wrapper content-page">
                 <article id="content" class="content-wrapper">
