--- a/apps/store/templates/store/search.html
+++ b/apps/store/templates/store/search.html
@@ -58,7 +58,7 @@
 <link rel="stylesheet" href="{% static 'statics/css/85185fcd95-searchpage_new_css.css' %}" as="style">
       
 <link rel="preload " href="{% static 'statics/js/47a9372f50-searchpage_new.js' %}" as="script">
-{% block extra_head %}
+{% endblock extra_head %}
 {% block content %}
 <div id="book-details-info" class="book-details-info hidden">
 </div>
